# MissionBlueAPI

./: .gitignore  .safety-project.ini  CONTRIBUTING.md  LICENSE  MissionBlue.py  README copy.md  README.md  auth.py  cli.py  file.py  mission_blue.py  mypy.ini  noxfile.py  pyproject.toml  requirement.txt  requirements.txt  scraper.py  setup.ps1  setup.sh  testFile
.github/: CODEOWNERS  auto_assign.yml  dependabot.yml  golden-file-updater.yml
.github/workflows/: auto-assign.yml  codeql.yml  dependency-review.yml  document-formater.yml  issue-assigner.yml  pr-assigner.yml  python-package.yml
docs/: conf.py  index.md  reference.md  usage.md
mission-blue/: .cookiecutter.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
mission-blue/docs/: conf.py  index.md  reference.md  usage.md
mission-blue/src/mission_blue/: __init__.py  __main__.py
mission-blue/tests/: __init__.py  test_main.py
src/MissionBlueAPI/: __init__.py  __main__.py
src/mission_blue/: cli.py
tests/: __init__.py  auth_test.py  file_test.py  mission_blue_test.py  no_content_template.golden  scraper_test.py  test_main.py
